[package]
name = "time-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0",features = ["full"]  }
mini-redis = "0.4.1"
msgpack_simple = "1.0.2"
bytes = "1.7.1"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3.0"
serde_json = "1.0.128"
byteorder = "1.5.0"
lazy_static = "1.5.0"
